added login and user profile

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -38,4 +38,5 @@
 
 <br>
 
-<%= link_to 'New Patient', new_patient_path %>
+<%= link_to 'New Patient', new_patient_path %> | 
+<%= link_to 'Go to Profile', '/profiles' %> 
