--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,4 +1,4 @@
-<!--<h1>Request for <%= @patient.firstname %>  <%= @patient.lastname %></h1>-->
+<h1>Request for <%= @patient.firstname %>  <%= @patient.lastname %></h1>
 <p>
 <b>Request details:</b>
 </br>
