--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -18,6 +18,6 @@
 <% end %>
 </table>
 <br />
-<%= link_to 'New patient request', new_patient_request_path(@patient) %>
-<%= link_to 'Back to Patient', @patient %>
+<%= link_to 'New patient request', new_patient_request_path(@patient), class: "btn btn-default" %>
+<%= link_to 'Back to Patient', @patient, class: "btn btn-default" %>
 
