--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,10 +1,44 @@
+
+  <body>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">SmartHealth</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><%= link_to 'Patients', patients_path %></li>
+            <li><%= link_to 'Profile', '/profiles' %></li>
+	    <li><%= link_to 'Prescriptions', prescriptions_path %></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <div class="container">
 <p id="notice"><%= notice %></p>
+
+<%= form_tag(patients_path, :method =>"get") do %>
+  <%= text_field_tag :search, nil, :placeholder => "Search patients by last name" %>
+  <%= submit_tag "Search" %>
+<%end%> 
+
+
+      <div class="starter-template">
 
 <h1>Patients</h1>
 
-<table>
+<table class="table table-striped table-bordered table-hover table-condensed">
   <thead>
     <tr>
+      <th>ID</th>
       <th>Firstname</th>
       <th>Lastname</th>
       <th>Dob</th>
@@ -20,6 +54,7 @@
   <tbody>
     <% @patients.each do |patient| %>
       <tr>
+	<td><%= patient.id %></td>
         <td><%= patient.firstname %></td>
         <td><%= patient.lastname %></td>
         <td><%= patient.dob %></td>
@@ -28,9 +63,9 @@
         <td><%= patient.injury %></td>
         <td><%= patient.observations %></td>
         <td><%= patient.doctor %></td>
-        <td><%= link_to 'Show', patient %></td>
-        <td><%= link_to 'Edit', edit_patient_path(patient) %></td>
-        <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', patient, class: "btn btn-default" %></td>
+        <td><%= link_to 'Edit', edit_patient_path(patient), class: "btn btn-info" %></td>
+        <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -38,5 +73,12 @@
 
 <br>
 
-<%= link_to 'New Patient', new_patient_path %> | 
-<%= link_to 'Go to Profile', '/profiles' %> 
+<%= link_to 'New Patient', new_patient_path, class: "btn btn-default" %> | 
+<%= link_to 'Go to Profile', '/profiles', class: "btn btn-default" %> 
+              
+</div>
+
+    </div>
+
+
+</body>
