--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,4 +1,4 @@
 <h1>New request</h1>
 <%= render 'form' %>
-<%= link_to 'Back', patient_requests_path(@patient) %>
+<%= link_to 'Back', patient_requests_path(@patient), class: "btn btn-default" %>
 
