--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,3 +1,33 @@
+ <body>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">SmartHealth</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><%= link_to 'Patients', patients_path %></li>
+            <li><%= link_to 'Profile', '/profiles' %></li>
+	     <li><%= link_to 'Prescriptions', prescriptions_path %></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <div class="container">
+
+
+      <div class="starter-template">
+
+<p id="notice"><%= notice %></p>
+
 <h1>Request for <%= @patient.firstname %>  <%= @patient.lastname %></h1>
 <p>
 <b>Request details:</b>
@@ -10,4 +40,7 @@
 </p>
 <%= link_to 'Edit', edit_patient_request_path(@patient, @request), class: "btn btn-default" %> |
 <%= link_to 'Back', patient_requests_path(@patient), class: "btn btn-default" %>
+</div>
+</div>
+</body>
 
