--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -3,7 +3,7 @@
 <tr>
 <th>Request details</th>
 </tr>
-<% for request in @requests %>
+<% for request in @request %>
 <tr>
 <td><%= request.request %></td>
 <td><%= request.comments %></td>
