--- a/app/views/prescriptions/_form.html.erb
+++ b/app/views/prescriptions/_form.html.erb
@@ -47,7 +47,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :patient_id %>
+    Patient ID
     <%= f.text_field :patient_id %>
   </div>
 
