--- a/app/views/prescriptions/index.html.erb
+++ b/app/views/prescriptions/index.html.erb
@@ -5,14 +5,14 @@
 <table class="table table-striped table-bordered table-hover table-condensed">
   <thead>
     <tr>
-      <th>Firstname</th>
-      <th>Lastname</th>
+      <!--<th>Firstname</th>
+      <th>Lastname</th>-->
+      <th>Patient ID</th>
       <th>Cost</th>
       <th>Doctorname</th>
       <th>Medicine</th>
       <th>Dose</th>
       <th>Description</th>
-      <th>Patient</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,14 +20,14 @@
   <tbody>
     <% @prescriptions.each do |prescription| %>
       <tr>
-        <td><%= prescription.firstname %></td>
-        <td><%= prescription.lastname %></td>
+        <!--<td><%= prescription.firstname %></td>
+        <td><%= prescription.lastname %></td>-->
+        <td><%= prescription.patient_id %></td>
         <td><%= prescription.cost %></td>
         <td><%= prescription.doctorname %></td>
         <td><%= prescription.medicine %></td>
         <td><%= prescription.dose %></td>
         <td><%= prescription.description %></td>
-        <td><%= prescription.patient %></td>
         <td><%= link_to 'Show', prescription, class: "btn btn-default" %></td>
         <td><%= link_to 'Edit', edit_prescription_path(prescription), class: "btn btn-info" %></td>
         <td><%= link_to 'Destroy', prescription, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
