--- a/app/views/prescriptions/show.html.erb
+++ b/app/views/prescriptions/show.html.erb
@@ -37,7 +37,7 @@
 
 <p>
   <strong>Patient ID:</strong>
-  <%= @prescription.patient %>
+  <%= @prescription.patient_id %>
 </p>
 
 <%= link_to 'Edit', edit_prescription_path(@prescription), class: "btn btn-default" %> |
