--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -50,7 +50,7 @@
         <td><%= profile.lastname %></td>
         <td><%= profile.address %></td>
         <td><%= profile.hospital %></td>
-        <td><%= profile.user %></td>
+        <td><%= profile.user_id %></td>
         <td><%= link_to 'Show', profile, class: "btn btn-default" %></td>
         <td><%= link_to 'Edit', edit_profile_path(profile), class: "btn btn-info" %></td>
         <td><%= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
