--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -50,7 +50,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @profile.user %>
+  <%= @profile.user_id %>
 </p>
 
 <%= link_to 'Edit', edit_profile_path(@profile), class: "btn btn-default" %> |
