--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
             <li><%= link_to 'Patients', patients_path %></li>
             <li><%= link_to 'Profile', '/profiles' %></li>
             <li><%= link_to 'Prescriptions', prescriptions_path %></li>
+		<li><%= link_to 'Report', report_path %></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
