--- a/app/views/patients/report.html.erb
+++ b/app/views/patients/report.html.erb
@@ -1,5 +1,4 @@
-
-  <body>
+<body>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -13,11 +12,11 @@
           <a class="navbar-brand" href="#">SmartHealth</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav">	
             <li><%= link_to 'Patients', patients_path %></li>
             <li><%= link_to 'Profile', '/profiles' %></li>
 	    <li><%= link_to 'Prescriptions', prescriptions_path %></li>
-		<li><%= link_to 'Report', report_path %></li>
+            <li><%= link_to 'Report', report_path %></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -26,15 +25,10 @@
     <div class="container">
 <p id="notice"><%= notice %></p>
 
-<%= form_tag(patients_path, :method =>"get") do %>
-  <%= text_field_tag :search, nil, :placeholder => "Search patients by last name" %>
-  <%= submit_tag "Search" %>
-<%end%> 
-
 
       <div class="starter-template">
 
-<h1>Patients</h1>
+<h1>Patients Report</h1>
 
 <table class="table table-striped table-bordered table-hover table-condensed">
   <thead>
@@ -48,7 +42,6 @@
       <th><%= sortable "injury" %></th>
       <th><%= sortable "observations" %></th>
       <th><%= sortable "doctors" %></th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -64,9 +57,6 @@
         <td><%= patient.injury %></td>
         <td><%= patient.observations %></td>
         <td><%= patient.doctor %></td>
-        <td><%= link_to 'Show', patient, class: "btn btn-default" %></td>
-        <td><%= link_to 'Edit', edit_patient_path(patient), class: "btn btn-info" %></td>
-        <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -78,8 +68,3 @@
 <%= link_to 'Go to Profile', '/profiles', class: "btn btn-default" %> 
               
 </div>
-
-    </div>
-
-
-</body>
