--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= f.label :dob %>
-    <%= f.date_select :dob %>
+    <%= f.date_select :dob, {:start_year => 1900}%>
   </div>
 
   <div class="field">
